# sandbox_Rust

airpods-connect/: Cargo.toml
airpods-connect/src/: main.rs
cat-tool/: Cargo.toml
cat-tool/src/: main.rs
commandline_samples/catr/: Cargo.toml  mk-out.sh
commandline_samples/catr/src/: libs.rs
commandline_samples/catr/tests/: cli.rs
commandline_samples/echor/src/: main.rs
commandline_samples/echor/tests/: cli.rs
commandline_samples/headr/: .gitignore  mk-out.sh
commandline_samples/uniqr/tests/expected/inputs/: cli.rs
gRPC_seveer_sample/: Cargo.toml
gRPC_seveer_sample/javasparrow-proto/: javasparrow-api.proto
gRPC_seveer_sample/src/: main.rs
gen_ogp/: Cargo.toml
gen_ogp/src/: main.rs
grrs/: Cargo.toml
grrs/src/: main.rs
hello-dioxus/: Cargo.toml
hello-dioxus/src/: main.rs
imgapi/: Cargo.toml
imgapi/src/: lib.rs  main.rs  opt.rs  result.rs
imgapi/src/commands/: get_image.rs
password_gen/: Cargo.toml
password_gen/src/: main.rs
pokemonAPI_command/: Cargo.toml
sample_axum/: Cargo.toml
sample_axum/example/: json.rs
sample_axum/src/: main.rs
