[package]
name = "gRPC_seveer_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6．2"
prost = "0.9"
tokio = { version = "1.16.1", features = ["full"] }

[build-dependencies]
tonic-build = "0.6"

