[package]
name = "imgapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
imgur_openapi = { version = "0.4.0" }
serde_json = "1.0.69"
structopt = "0.3.25"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros"] }
